objects/CRMDB__c.object
<CustomObject>
    <fields>
        <fullName>GES_or_CGEM_Area__c</fullName>
        <description>Based on GES list, updated by CoS 
https://cisco.jiveon.com/groups/ges</description>
        <inlineHelpText>Based on GES list, updated by CoS
https://apps.na.collabserv.com/communities/service/html/communitystart?communityUuid=74baff1b-36ae-4dfb-b43a-93903d4869b2</inlineHelpText>
        <label>GES / CGEM / GSP Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CGEM_APJC_ANZ</fullName>
                </value>
                <value>
                    <fullName>CGEM_APJC_ASEAN</fullName>
                </value>
                <value>
                    <fullName>CGEM_APJC_India</fullName>
                </value>
                <value>
                    <fullName>CGEM_APJC_Japan</fullName>
                </value>
                <value>
                    <fullName>CGEM_APJC_Korea</fullName>
                </value>
                <value>
                    <fullName>CGEM_EMEAR_Central</fullName>
                </value>
                <value>
                    <fullName>CGEM_EMEAR_North</fullName>
                </value>
                <value>
                    <fullName>CGEM_France</fullName>
                </value>
                <value>
                    <fullName>CGEM_Germany</fullName>
                </value>
                <value>
                    <fullName>CGEM_UKI</fullName>
                </value>
                <value>
                    <fullName>GES_IBM</fullName>
                </value>
                <value>
                    <fullName>GES_MWA</fullName>
                </value>
                <value>
                    <fullName>GES_NE</fullName>
                </value>
                <value>
                    <fullName>GES_South</fullName>
                </value>
                <value>
                    <fullName>GES_West</fullName>
                </value>
                <value>
                    <fullName>GSP_AMER</fullName>
                </value>
                <value>
                    <fullName>GSP_EMEAR</fullName>
                </value>
                <value>
                    <fullName>GSP_APJC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Global_Fortune_500_Rank_2018__c</fullName>
        <description>Global Fortune 500 Rank (2018)</description>
        <label>Global Fortune 500 Rank (2018)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Headquarter_Location__c</fullName>
        <description>Headquarter Location</description>
        <label>Headquarter Location</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Impact_of_Accomplishments_or_Challenge__c</fullName>
        <description>THIS IS BEING USED FOR EXECUTIVE WEEKLY UPDATES. MM/DD/YY + Bullet format required. What is the impact of the Accomplishment or Challenge? 
Please identify the impact for EACH Accomplishment or Challenge. 
i.e. Accomplishment #1:, Challenge #1, etc. If no Accomplishments or Challenges for the week, use N/A.</description>
        <inlineHelpText>THIS IS BEING USED FOR EXECUTIVE WEEKLY UPDATES. MM/DD/YY + Bullet format required. Please identify the impact for EACH Accomplishment or Challenge.
i.e. Accomplishment #1:, Challenge #1, etc. If no Accomplishments or Challenges for the week, use N/A.</inlineHelpText>
        <label>Impact of Accomplishments or Challenges</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integrated_Account_Plan_IAP_Link__c</fullName>
        <description>Integrated Account Plan (IAP) - Link</description>
        <inlineHelpText>Insert link to Integrated Account Plan</inlineHelpText>
        <label>Integrated Account Plan (IAP) - Link</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Integrated_Account_Plan_IAP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does your customer have an Integrated Account Plan? Y/N</description>
        <inlineHelpText>Does your customer have an Integrated Account Plan? Y/N</inlineHelpText>
        <label>Integrated Account Plan (IAP)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_CAP_caused_by_CMS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is CAP caused by CMS</description>
        <inlineHelpText>Y/N</inlineHelpText>
        <label>Is CAP caused by CMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Customer_on_CAP__c</fullName>
        <description>Is Customer on CAP</description>
        <inlineHelpText>If Customer is NOT on CAP select No in the drop down. If the Customer is on CAP select appropriate CAP type and save. Then complete All fields in the CAP Management Section.</inlineHelpText>
        <label>Is Customer on CAP</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>CAP - A</fullName>
                </value>
                <value>
                    <fullName>CAP - B</fullName>
                </value>
                <value>
                    <fullName>CAP - M</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_MSR_Required__c</fullName>
        <inlineHelpText>If MSR is required to select Yes and complete the “Last MSR Date” field, if No date field is not required.</inlineHelpText>
        <label>Is MSR Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key_Contacts__c</fullName>
        <defaultValue>"SDM:  GAM:   CSE:    SDE:   HTOM:   Other:"</defaultValue>
        <description>Please move all your Key Contacts to the new Key Contacts tool and stop entering contact information in this field.</description>
        <inlineHelpText>Please move all your Key Contacts to the new Key Contacts tool and stop entering contact information in this field.</inlineHelpText>
        <label>Key Contacts - WILL BE DELETED on 4/26</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Land__c</fullName>
        <label>Land</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Face_to_Face_Meeting_date__c</fullName>
        <description>Last Face to Face Meeting date</description>
        <label>Last Face to Face Meeting date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_MSR_Date_or_N_A__c</fullName>
        <description>Date of Last Monthly Business Review.  MM/DD/YYYY</description>
        <inlineHelpText>Date of Last Monthly Business Review.  MM/DD/YYYY</inlineHelpText>
        <label>Last MSR Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_QBR__c</fullName>
        <description>Date of Last Quarterly Business Review.  MM/DD/YYYY</description>
        <inlineHelpText>Date of Last Quarterly Business Review.  MM/DD/YYYY</inlineHelpText>
        <label>Last QBR Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Links_to_Quote_Contract_SoW__c</fullName>
        <description>Please enter the link where to find the quote(s) and/or contract(s)</description>
        <inlineHelpText>Please enter the link where to find the quote(s) and/or contract(s)</inlineHelpText>
        <label>Links to Quote/ Contract/ SoW</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <description>Name of SDM direct Manager, or assigned Manager, for the informational and modelling purposes.</description>
        <label>Manager</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Margin_As_sold__c</fullName>
        <description>% - found in SKU Active Report 
https://cisco.jiveon.com/groups/cms-presales-and-deal-management/overview</description>
        <inlineHelpText>% - found in SKU Active Report</inlineHelpText>
        <label>Margin (As sold)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Margin_Delivered__c</fullName>
        <description>Percentage found in Tableau, should include FY to Date.</description>
        <inlineHelpText>% - found in Tableau, should include FY to Date</inlineHelpText>
        <label>Margin (Delivered)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Master_Customer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent of customer contract</description>
        <label>Parent Customer Contract</label>
        <referenceTo>CRMDB__c</referenceTo>
        <relationshipLabel>Child Customer Contracts</relationshipLabel>
        <relationshipName>CRMDB_Customers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Notes</description>
        <inlineHelpText>Additional company ranking information, such as size ranking within the customer’s industry.</inlineHelpText>
        <label>Notes</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Scheduled_Meetings_Per_Quarter__c</fullName>
        <description>Calculated Field: Locked - Multiplies the # of meetings per week with 13 weeks per quarter</description>
        <label>Number of Scheduled Meetings Per Quarter</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Scheduled_Meetings_per_Week__c</fullName>
        <description># of scheduled meetings of 45min per week for this customer which the SDM regularly attends, can be internal or external meetings, So just an INT field</description>
        <label>Number of Scheduled Meetings per Week</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offer_Level__c</fullName>
        <description>What offer lever was sold for this contract?</description>
        <inlineHelpText>Select Offer Level</inlineHelpText>
        <label>Standardization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Custom off Standard Base - b/w 20% to 80% Custom</fullName>
                </value>
                <value>
                    <fullName>Legacy SKUs</fullName>
                </value>
                <value>
                    <fullName>Bespoke - &gt; 80% Custom</fullName>
                </value>
                <value>
                    <fullName>Foundation</fullName>
                </value>
                <value>
                    <fullName>Comprehensive</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Std Comprehensive</fullName>
                    <isActive>false</isActive>
                    <label>Std Comprehensive</label>
                </value>
                <value>
                    <fullName>Std Standard</fullName>
                    <isActive>false</isActive>
                    <label>Std Standard</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Open_CONTRACT_CRs_Complex__c</fullName>
        <description># of simple Contract Change Controls (i.e. Non-Standard-No Cost, Non-Standard-with Cost)</description>
        <label>Open CONTRACT CRs - Complex</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_CONTRACT_CRs_Simple__c</fullName>
        <description># of simple Contract Change Controls (i.e. Standard-No Cost, Standard-with Cost)</description>
        <label>Open CONTRACT CRs - Simple</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_Delivered_CSM_Assigned__c</fullName>
        <description>Name of the CSM assigned when a Delivery Partner is engaged (e.g. Optanix, Cognizant, IpSoft). (This field is locked, as SmartSheet forms need to be updated when the SDM name is changed.  Please submit requests for changes in the CRMDB Admin Spark room.  You will receive a response upon completion.)</description>
        <inlineHelpText>Name of the CSM assigned when a Delivery Partner is engaged (e.g. Optanix, Cognizant, IpSoft)</inlineHelpText>
        <label>Partner Delivered CSM Assigned</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platform_Count__c</fullName>
        <description># of Platforms used to support this Customer (CMSP, Optanix MAP, IPSoft, Centerity, etc...)</description>
        <inlineHelpText># of Platforms used to support this Customer (CMSP, Optanix MAP, IPSoft, Centerity, etc...)</inlineHelpText>
        <label>Platform Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Platforms_Type__c</fullName>
        <description>Dropdown for type of Platform.</description>
        <inlineHelpText>Select all that apply</inlineHelpText>
        <label>Platform(s) Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Centerity</fullName>
                </value>
                <value>
                    <fullName>CMSP</fullName>
                </value>
                <value>
                    <fullName>EM7/Remedy</fullName>
                    <isActive>false</isActive>
                    <label>EM7/Remedy</label>
                </value>
                <value>
                    <fullName>IP Soft</fullName>
                </value>
                <value>
                    <fullName>No Platform</fullName>
                </value>
                <value>
                    <fullName>Remedy</fullName>
                </value>
                <value>
                    <fullName>SG MAP</fullName>
                </value>
                <value>
                    <fullName>SG MAP &amp; CMSP</fullName>
                    <isActive>false</isActive>
                    <label>SG MAP &amp; CMSP</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proactive_Problem_Management__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Proactive Problem Management</description>
        <label>Proactive Problem Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Projects_On_going_Count__c</fullName>
        <description>Projects On-going Count</description>
        <label>Projects On-going Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason_for_Yellow_Red__c</fullName>
        <description>Check the box if the reason for the account being flagged as Yellow or Red.</description>
        <inlineHelpText>Select reason(s) for the account being flagged as Yellow or Red is caused by CMS Delivery performance</inlineHelpText>
        <label>Reason for Yellow / Red</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Delivery</fullName>
                </value>
                <value>
                    <fullName>Cisco Product</fullName>
                </value>
                <value>
                    <fullName>CMS Offer</fullName>
                </value>
                <value>
                    <fullName>Platform</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Selective Transition</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reference_Account__c</fullName>
        <description>Is this customer willing to provide a CMS reference?  Yes/No</description>
        <inlineHelpText>Is this customer willing to provide a CMS reference?  Y/N</inlineHelpText>
        <label>Reference Account</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Regions__c</fullName>
        <description>Number of regions you support for this customer -  how many regions to do you have customer interactions? (i.e. AMER, EMEAR, APJC)</description>
        <inlineHelpText>Select all that apply</inlineHelpText>
        <label>Regions supported</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AMER</fullName>
                </value>
                <value>
                    <fullName>EMEAR</fullName>
                </value>
                <value>
                    <fullName>APJC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renew__c</fullName>
        <label>Renew</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renewal_Probability__c</fullName>
        <description>Percentage based on SDM knowledge</description>
        <inlineHelpText>% based on SDM knowledge</inlineHelpText>
        <label>Renewal Probability</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Revenue_Year__c</fullName>
        <description>Revenue Year</description>
        <inlineHelpText>The fiscal year in which the annual revenue was reported.</inlineHelpText>
        <label>Revenue Year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Revenue_in_US__c</fullName>
        <description>Revenue generated in US $</description>
        <label>Revenue in US $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDM_Allocation__c</fullName>
        <description>SDM % Allocation</description>
        <label>SDM % Allocation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SDM_Assigned__c</fullName>
        <description>Name of the SDM assigned (only one name allowed).  </description>
        <inlineHelpText>Name of the SDM assigned (only one name allowed, additional SDMs should be added to the Contacts Field)</inlineHelpText>
        <label>SDM Lead</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDM_Count__c</fullName>
        <description>SDM Count</description>
        <inlineHelpText># of SDMs supporting this Customer</inlineHelpText>
        <label>SDM Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <description>Does this Customer have SLA's (penalties apply) Y/N</description>
        <inlineHelpText>Does this Customer have SLA's (penalties apply) Y/N</inlineHelpText>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLX_and_KPI_Summary__c</fullName>
        <description>Summay of SLX and KPI obligations and performance by Service (six month trending if available)</description>
        <inlineHelpText>Summay of SLX and KPI obligations and performance by Service (six month trending if available)</inlineHelpText>
        <label>SLX and KPI Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Number__c</fullName>
        <inlineHelpText>Should be part of a new record create from the DLT notification.</inlineHelpText>
        <label>Sales Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <description>Based on GES list, updated by CoS </description>
        <inlineHelpText>Based on GES list, updated by CoS 
https://apps.na.collabserv.com/communities/service/html/communitystart?communityUuid=74baff1b-36ae-4dfb-b43a-93903d4869b2</inlineHelpText>
        <label>Segment</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Transition_Date__c</fullName>
        <description>Enter Initial activation date (not the subsequent dates for staged activations or renewals) ( Day to go live)</description>
        <inlineHelpText>Enter Initial activation date (not the subsequent dates for staged activations or renewals)</inlineHelpText>
        <label>Service Transition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Theater__c</fullName>
        <description>CET Theater</description>
        <inlineHelpText>CET Theater</inlineHelpText>
        <label>Theater</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>APJC</fullName>
                </value>
                <value>
                    <fullName>EMEAR</fullName>
                </value>
                <value>
                    <fullName>AMER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_CMS_Contract_Value_CR_S__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Child Record is the sum of  Total CMS Contract + CRs,  Parent Record is the Sum of all Child record(s) Contract+CRs.</description>
        <inlineHelpText>Child Record is the sum of  Total CMS Contract + CRs,  Parent Record is the Sum of all Child record(s) Contract+CRs.</inlineHelpText>
        <label>Total CMS Contract Value + CR(S)($000)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_CMS_Contract_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Loaded from  Booked Qualification in a Child Record, Summed from Child record(s) to a Parent.</description>
        <inlineHelpText>Loaded from  Booked Qualification in a Child Record, Summed from Child record(s) to a Parent.</inlineHelpText>
        <label>Total CMS Contract Value($000)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Child_CMS_CR__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Summation of child's Total_CMS_Contract_Value_CR_S__c</description>
        <inlineHelpText>Child Record is the sum of Total Contract CRs,  Parent Record is the Sum of CRs for all children.</inlineHelpText>
        <label>Total Customer CR(s) Value($000)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cisco_Contract_Value__c</fullName>
        <description>Total Cisco Contract Value</description>
        <inlineHelpText>Add Totals from all Services</inlineHelpText>
        <label>Total Cisco Contract Value($000)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Other_Cisco_products_and_services__c</fullName>
        <description>Total Other Cisco products and services</description>
        <inlineHelpText>SDM to gather this information with input from the Account Team and SDE</inlineHelpText>
        <label>Total Other Cisco Product/Services($000)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_of_Transition__c</fullName>
        <description>Select the type and status of the Service Transition phase from dropdown meu: none, simple, complex. Complexity raises when any of further occurs: custom processes/design, non-standard runbook, custom tooling, offer level, non-standard reporting &amp; billing</description>
        <label>Type of Transition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Simple</fullName>
                </value>
                <value>
                    <fullName>Complex</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>US_Fortune_500_Rank_2018__c</fullName>
        <description>US Fortune 500 Rank (2018)</description>
        <label>US Fortune 500 Rank (2018)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Upsell_Opportunities__c</fullName>
        <description>Bullet(s) based on SDM knowledge</description>
        <inlineHelpText>Bullet(s) based on SDM knowledge</inlineHelpText>
        <label>Upsell Opportunities</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Who_Delivers_Service__c</fullName>
        <description>Who is delivering the Service to the Customer?</description>
        <inlineHelpText>Select who is delivering the Service</inlineHelpText>
        <label>Who Delivers Service</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>CenturyLink</fullName>
                </value>
                <value>
                    <fullName>Cisco</fullName>
                </value>
                <value>
                    <fullName>Cognizant</fullName>
                </value>
                <value>
                    <fullName>E-Loyalty</fullName>
                </value>
                <value>
                    <fullName>Global Capacity</fullName>
                </value>
                <value>
                    <fullName>GTT</fullName>
                </value>
                <value>
                    <fullName>IPSoft</fullName>
                </value>
                <value>
                    <fullName>Mindlink</fullName>
                </value>
                <value>
                    <fullName>Optanix</fullName>
                </value>
                <value>
                    <fullName>Yokogowa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>Data of customer information, customer sentiment, renewal date, financial information, what is important for customer etc. Each customer may have multiple contracts, which are managed separately. About 70 SDMs input the data and additional ~100 others use it. In total about 200 users. Used as user input form and only authorized users can access it. Data is populated manually by SDMs and DB Admin.</description>
    <label>CRMDB</label>
    <nameField>
        <label>Customer Contract</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CRMDB</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CRMDB__c.CRMDB_Contracts</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Customers_on_Cap_List_View</fullName>
        <columns>Account_Name__c</columns>
        <columns>NAME</columns>
        <columns>Is_Customer_on_CAP__c</columns>
        <columns>Is_CAP_caused_by_CMS__c</columns>
        <columns>SDM_Assigned__c</columns>
        <columns>Manager__c</columns>
        <columns>Active_Customer__c</columns>
        <columns>Account_State__c</columns>
        <columns>Total_CMS_Contract_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Customer_on_CAP__c</field>
            <operation>contains</operation>
            <value>CAP - A,CAP - B,CAP - M</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CRMDB__c.CRMDB_Contracts</value>
        </filters>
        <label>Customers on Cap List View</label>
    </listViews>
    <listViews>
        <fullName>Parent_Contracts</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>SDM_Assigned__c</columns>
        <columns>Manager__c</columns>
        <columns>Theater__c</columns>
        <columns>Active_Customer__c</columns>
        <columns>Account_State__c</columns>
        <columns>Is_Customer_on_CAP__c</columns>
        <columns>Is_CAP_caused_by_CMS__c</columns>
        <columns>Total_CMS_Contract_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Master_Customer_Name__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CRMDB__c.CRMDB_Contracts</value>
        </filters>
        <label>Parent Contracts</label>
    </listViews>
    <listViews>
        <fullName>SDM_Manager_List_View</fullName>
        <columns>Account_Name__c</columns>
        <columns>NAME</columns>
        <columns>SDM_Assigned__c</columns>
        <columns>Manager__c</columns>
        <columns>Theater__c</columns>
        <columns>Active_Customer__c</columns>
        <columns>Account_State__c</columns>
        <columns>Is_Customer_on_CAP__c</columns>
        <columns>Is_CAP_caused_by_CMS__c</columns>
        <columns>Total_CMS_Contract_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CRMDB__c.CRMDB_Contracts</value>
        </filters>
        <label>SDM / Manager List View</label>
    </listViews>
    <recordTypes>
        <fullName>CRMDB_Contracts</fullName>
        <active>true</active>
        <description>Customer Contract can be linked to Parent Customer Contracts</description>
        <label>CRMDB_Contracts</label>
    </recordTypes>
    <validationRules>
        <fullName>Make_MSR_Date_Mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
ISPICKVAL( Is_MSR_Required__c , "YES"), 
ISBLANK(Last_MSR_Date_or_N_A__c) 
)</errorConditionFormula>
        <errorDisplayField>Last_MSR_Date_or_N_A__c</errorDisplayField>
        <errorMessage>Please complete Last MSR Date</errorMessage>
    </validationRules>
</CustomObject>